--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,38 @@
 {
-  "name": "dukasim-hackathon",
-  "version": "0.0.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "ts-node ./src/index.ts",
+    "start:nodemon": "nodemon",
+    "build": "tsc",
+    "build-watch": "tsc -w"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "@types/activedirectory2": "^1.2.2",
+    "@types/compression": "^1.7.1",
+    "@types/express": "^4.17.13",
+    "@types/node": "^14.14.37",
+    "@types/validator": "^13.1.3",
+    "@typescript-eslint/parser": "^4.21.0",
+    "concurrently": "^6.0.1",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.2.3"
   }
 }
