--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,16 @@
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/activedirectory2": "^1.2.2",
     "@types/compression": "^1.7.1",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^14.14.37",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/parser": "^4.21.0",
