--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -18,7 +18,7 @@
 on:
   push:
     branches:
-      - cicd
+      - main
 
 env:
   AZURE_WEBAPP_NAME: forms-internetworking    # set this to your application's name
